styles/style.css
#title {
	font-family: 'Lato', sans-serif;
	font-size: xx-large;
	color: white;
	position: relative;
	width: auto;
	text-align: center;
	text-shadow: 0px 2px 3px #555;
}
#social {
	font-size: xx-large;
	color: white;
	position: relative;
	text-align: center;
	text-shadow: 0px 2px 3px #555;
}
.center {
	width: 50%;
	height: auto;
	margin: auto;
	max-height: 100px;
	max-width: 500px;
	position: absolute;
	top: 0px;
	left: 0px;
	bottom: 0px;
	right: 0px;
}
hr {
	border: 0;
	height: 0;
	border-top: 1px solid rgba(0, 0, 0, 0.1);
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
a {
	padding-left: 2px;
	padding-right: 2px;
}
a.first {
	padding-left: 0px;
}
a.last {
	padding-right: 0px;
}
a:link {
	color: white;
}
a:visited {
	color: white;
}
a:hover {
	color: darkgrey;
}

